--- a/Blogpost.html
+++ b/Blogpost.html
@@ -1,21 +1,20 @@
 <html>
 
-    <head>
-        <title>El titulo del post</title>
-        <link rel="stylesheet" href="CSS/styles.css" />
-    </head>
+<head>
+    <title>El titulo del post</title>
+    <link rel="stylesheet" href="CSS/styles.css" />
+</head>
 
-    <body>
-        <div id="container">
-            <div id="post">
-                <div id="cabecera">
-                    Cabecera
-                </div>
-                <h1>Este es el titulo atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que pueden hacer las ramas</p>
-
-            </div>
+<body>
+    <div id="container">
+        <div id="cabecera">
+            Hyperblog <span id="tagline">Tu blog de confianza</span>
         </div>
-    </body>
+        <div id="post">
+            <h1>Este es el titulo atractivo e interesante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que pueden hacer las ramas</p>
+        </div>
+    </div>
+</body>
 
 </html>
