Una version del hyperblog

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Bienvenido a Hyperblock</title>
+    <title>Bienvenido a Hyperblock 2.0</title>
     <link rel="stylesheet" href="CSS/styles.css" />
 </head>
 
