--- a/Blogpost.html
+++ b/Blogpost.html
@@ -14,6 +14,7 @@
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;acute;bles que pueden hacer las ramas</p>
+                <img src="./Images/equipo.jpg" alt="equipo">
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Exceptio si eres un rockstar. Pero estadisticamente no lo eres ... por ahora.</p>
                 <p>Suscribete y dale like</p>
             </div>
