--- a/Blogpost.html
+++ b/Blogpost.html
@@ -8,14 +8,15 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                <img id="logo" src="Images/dragon.png" />
+                <img id="logo" src="Images/dragon.png" >
                 Hyperblog <span id="tagline">Tu blog de Cabecera</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;acute;bles que pueden hacer las ramas</p>
-                <img src="./Images/equipo.jpg" alt="equipo">
-                <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Exceptio si eres un rockstar. Pero estadisticamente no lo eres ... por ahora.</p>
+                <img src="./Images/equipo.jpg" alt="team" class="team">
+                <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. 
+                    Excepto si eres un rockstar. Pero estadisticamente no lo eres ... por ahora.</p>
                 <p>Suscribete y dale like</p>
             </div>
             <div id="footer">
